# almo-client

./: .gitignore  CMakeLists.txt
almo/: Camera.cpp  Camera.hpp  Display.cpp  Display.hpp  Engine.cpp  Engine.hpp  Program.cpp  Program.hpp  Shader.cpp  Shader.hpp  main.cpp  pch.h  simple.frag  simple.vert
almo.xcodeproj/: project.pbxproj
almo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
